# poller

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/src/: enums.py  models.py  questions.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.js  Context.js
frontend/src/components/: AskQuestion.jsx  ConnectionStatus.jsx  Question.jsx  QuestionsList.jsx
frontend/src/utils/: enums.js  parser.js  websocket.js
