[tool.poetry]
name = "poller"
version = "0.1.0"
description = "Poller - slido alternative"
authors = ["Nagy Wesley"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^10.4"
watchdog = {extras = ["watchmedo"], version = "^2.2.1"}
pydantic = "^1.10.4"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"